# readingroom-audio

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pilot_comparison.py  pyproject.toml
.github/workflows/: pages.yml
data/events/: 001_2010-02-06_The_Reading_Room_Talk_Series_I.json  002_2011-06-08_Capoeira_Angola_Bangkok.json  003_2011-06-08_Capoeira_Angola_Show.json  004_2011-06-20_Nelson_Henricks.json  005_2011-06-21_La_commune_screening_and_talk.json  006_2011-06-22_Life_through_Zakariya_Lens.json  007_2011-09-15_H๐m๐_in_Art_Art_of_H๐m๐.json  008_2011-09-24_Romania_Model.json  009_2011-11-12_Artist_Talk_Dennis_Balk_Bangkok_Bound.json  010_2011-11-19_Talk_Series_III_Archive_Knowledge_Power.json  011_2011-12-07_สนทรยศาสตรในการเมอง.json  012_2012-01-07_Asian_Modernities.json  013_2012-01-15_คนยคเนตกบเพลงและหนง.json  014_2012-01-20_The_Reading_Room_Talk_Series_II.json  015_2012-02-12_John_Cage_and_Philosophy_of_Experimental_Music.json  016_2012-02-17_Night_School_1_SOPA.json  017_2012-03-23_Night_School_2_Hate_Speech.json  018_2012-04-25_The_Reading_Room_Talk_Series_4_Remembrance_of_Things_Past.json  019_2012-04-29_Night_School3.json  020_2012-05-06_1911_ปฎวตขบไลราชวงคชง.json  021_2012-05-18_Night_School4.json  022_2012-05-26_SEA1_Talk_and_Screening.json  023_2012-06-03_ART_21_screening_and_talk.json  024_2012-06-21_Night_School5_Media_Art.json  025_2012-06-30_Thai_Football.json  026_2012-07-11_world_football.json  027_2012-07-21_Bank.json  028_2012-07-28_higgs.json  029_2012-08-14_Mother.json  030_2012-08-17_Night_School_6_Right_to_access.json  031_2012-08-25_เกาอดไซนสญชาตไทยใน_THE_HUNGER_GAMES.json  032_2012-08-31_ThursDIY_3_Protect_Yourself_Online.json  033_2012-09-08_11th_Year_911_USA_and_the_Irreparable_World.json  034_2012-09-08_Seeing_the_Invisible_Godzilla.json  035_2012-09-15_ไขคดฆาตกรรมในหองปดตาย.json  036_2012-10-07_โรงเรยน_พลบคำ_7_นรนาม.json  037_2012-10-14_สทธการสอสารในสามโลก.json  038_2012-10-20_Creative_Time_Summit.json  039_2012-12-19_แรงเงา_ในดวงตาของชายไทย.json  040_2012-12-21_Charles_LaBelle.json  (+121 more)
docs/: _config.yml  audio-pipeline.md  index.html  paper.md
docs/audio-preview/: index.html
docs/benchmark-report/: index.md
notebooks/: audio_comparison.ipynb
src/readingroom_audio/: __init__.py  __main__.py  batch.py  benchmark.py  compare.py  download.py  enhance.py  listening_test.py  mux.py  reporting.py  sampling.py  score.py  segment.py  stats.py  utils.py
tests/: test_smoke.py
